--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 
 .gallery {
   width: 100%;
-  max-width: 1000px;
+  max-width: 1600px;
   margin: 40px auto;
 }
 .gallery-slider {
@@ -13,7 +13,7 @@ body {
   margin: 0 0 10px 0;
 }
 .gallery-slider .swiper-slide {
-  width: auto;
+  width: 100%;
   height: 80%;
 }
 .gallery-slider .swiper-slide img {
@@ -25,6 +25,7 @@ body {
 .gallery-thumbs {
   width: 100%;
   padding: 0;
+  height: 20%;
   overflow: hidden;
 }
 .gallery-thumbs .swiper-slide {
